# StackScraper

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  Engine.cpp  Engine.hpp  Globals.hpp  README.md  ReadMeContributor  conan_provider.cmake  conandata.yml  conanfile.py  main.cpp
Documentation/: base  base.txt
FSM/: State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp
GUI/: test.cpp
Logic/: ApiManager.cpp  ApiManager.h  ApiManager.hpp  DBmanager.cpp  DBmanager.h  DBmanager.hpp  LoginManager.cpp  PromptSingleton.cpp  PromptSingleton.hpp  StackManager.cpp  StackManager.hpp  Syntax.hpp  SyntaxHighlighting.cpp  SyntaxHighlighting.hpp  TextFormatter.hpp
Logic/Database/: DBmanager.cpp  DBmanager.hpp  LoginManager.cpp  LoginManager.hpp  QueryHelper.cpp  QueryHelper.hpp
Logic/StackApi/: StackManager.cpp  StackManager.hpp  Syntax.hpp  SyntaxHighlighting.cpp  SyntaxHighlighting.hpp
Logic/TagList/: TagsList.cpp  TagsList.hpp
States/: StateAbout.cpp  StateAbout.hpp  StateExit.cpp  StateExit.hpp  StateFavourites.cpp  StateFavourites.hpp  StateHistory.cpp  StateHistory.hpp  StateIdle.cpp  StateIdle.hpp  StateListTags.cpp  StateListTags.hpp  StateLogin.cpp  StateLogin.hpp  StateMenu.cpp  StateMenu.hpp  StatePrompt.cpp  StatePrompt.hpp  StateRegister.cpp  StateRegister.hpp  StateResult.cpp  StateResult.hpp  StateResultTags.cpp  StateResultTags.hpp  StateTags.cpp  StateTags.hpp  StatesConf.hpp  StatesWrapper.hpp
Texts/: AllTexts.hpp
libs/soci/: CMakeLists.txt
libs/soci/include/soci/: soci-config.h
libs/soci/src/core/: SOCIConfig.cmake
